[b]Version 0.7.1[/b]:

(2012-02-22)
 * Now it's possible to change the opensubtitles server.
 * Opensubtitles: fix download link.

(2012-02-19)
 * Store by default the screenshots in a folder inside the user's pictures 
   folder. (Requires Qt 4.4)
 * Bugfix: don't try to create the lock file if the config dir doesn't exist.
   This caused a 10sec delay when smplayer is run for the first time.

[b]Version 0.7.0[/b]:

(2012-01-28)
 * Add Help -> Check for updates (replaces Help -> Tips)

(2012-01-27)
 * Simplify the about dialog.

(2012-01-25)
 * Detect mplayer2.
 * Use precise seeking is using mplayer2.
 * Add an option in preferences -> interface to enable or not precise seeking.

(2012-01-24)
 * Move the open dvd, vcd and audio cd to a submenu.

(2012-01-23)
 * New option for command-line: -disable-server. This option disables the 
   server used to communicate with other instances. This, of course, disables 
   too the possibility to use a single instance.

(2012-01-23)
 * Move the favorite menu to the open menu, and add an icon to the toolbar.

(2012-01-13 - 2012-01-21)
 * New favorite menu, where you can add your favorite videos, music, streams,
   youtube videos... It's also possible to add submenus.

(2012-01-20)
 * Use QtLockedFile instead of QxtFileLock, so we can get rid of the libqxt
   dependency on windows.
   The QtLockedFile is under the BSD license.

(2012-01-19)
 * The title of youtube videos is displayed correctly. And the stream url is 
   replaced by the url of the youtube page.

(2012-01-14)
 * Added the Croatian translation, by jk <marshsmello@gmail.com>

(2012-01-12)
 * Detect asx, m3u, pls, and ram streams and pass -playlist to mplayer, so
   the user doesn't have to indicate if a url is a playlist.

(2012-01-11)
 * Added an option in preferences -> performance to select the desired
   quality for youtube videos.

(2012-01-11)
 * Added a very basic support for youtube. Now you can open urls like